--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
 
 	<!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	<div class="home"><a href="index.html"><span></span></a></div>
 	<div class="container">
-	<div class="home"><a href="index.html"><span></span> / HEM</a></div>
 		<div class="row">
-			<div class="eleven columns" style="margin-top: 22%">
+			<div class="eleven columns" style="margin-top: 25%">
 				<h1>Arbete / Utbildning</h1>
 			</div>
 		</div>
