--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 	<!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="home"><a href="index.html"><span></span></a></div>
 	<div class="container">
 		<div class="row">
 			<div class="two-thidrs column" style="margin-top: 25%">
