--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="cover" lang="en">
+<html lang="en">
 
 <head>
 
@@ -23,7 +23,9 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/nino.css">
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	
+	
 
 	<!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -31,12 +33,12 @@
 
 </head>
 
-<body>
+<body class="cover">
 
 	<!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="home"><a href="index.html"><span></span></a></div>
-	<div class="container">
+	<div class="container" style="display:none;">
 		<div class="row">
 			<div class="two-thidrs column" style="margin-top: 25%">
 				<h1>Nino Mengarelli.</h1>
@@ -48,6 +50,7 @@
 
 	<!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="js/nino.js"></script>
 </body>
 
 </html>
