--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/nino.css">
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	
 	<!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<link rel="icon" type="image/png" href="images/favicon.png?v=1" />
@@ -35,7 +36,7 @@
 	<!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<div class="home"><a href="index.html"><span></span></a></div>
-	<div class="container">
+	<div class="container" style="display:none;">
 		<div class="row">
 			<div class="eleven columns" style="margin-top: 25%">
 				<h1>Arbete / Utbildning</h1>
@@ -92,6 +93,7 @@ inriktning Reklam & Information (Media).</p>
 
 	<!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+   <script src="js/nino.js"></script>
 </body>
 
 </html>
