update cover and info

--- a/about.html
+++ b/about.html
@@ -45,6 +45,10 @@
 		<div class="s- row">
 			<div class="eleven columns">
 				<h2>Arbete</h2>
+                <h3>Projektledare Fröjd / 17.02 - pågående</h3>
+				<div class="text">
+					&nbsp;
+				</div>
 				<h3>Webutvecklare Ottoboni / 14.12-17.03</h3>
 				<div class="text">
 					<p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
