--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<style>
 		.cover {
-			background: url(images/cover.jpg) no-repeat center center fixed;
+			background: url(images/cover2.jpg) no-repeat center center fixed;
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -51,7 +51,7 @@
 		<div class="row">
 			<div class="two-thidrs column" style="margin-top: 22%">
 				<h1>Nino Mengarelli.</h1>
-				<p class="slogan">Skapar webb för <em>"The Internet"</em></p>
+				<p class="slogan">Projektledare inom webb</p>
 				<a class="button button-primary" href="about.html">Läs mer om mig</a>.
 			</div>
 		</div>
