--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="row">
 			<div class="two-thidrs column" style="margin-top: 22%">
 				<h1>Nino Mengarelli.</h1>
-				<p class="slogan">Projektledare inom webb</p>
+				<p class="slogan">Digital projektledare</p>
 				<a class="button button-primary" href="about.html">Läs mer om mig</a>.
 			</div>
 		</div>
