--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<style>
 		.cover {
-			background: url(images/cover2.jpg) no-repeat center center fixed;
+			background: linear-gradient(
+                rgba(0, 0, 0, 0.6),
+                rgba(0, 0, 0, 0.6)
+            /*rgba(117,189,209,0.6),
+            rgba(250, 128, 114,0.6)*/
+            ),
+            url(images/cover2.jpg) no-repeat center center fixed;
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
