--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="two-thidrs column" style="margin-top: 22%">
 				<h1>Nino Mengarelli.</h1>
 				<p class="slogan">Digital projektledare</p>
-				<a class="button button-primary" href="about.html">Läs mer om mig</a>.
+				<a class="button button-primary" href="about.html">Läs mer om mig</a>
 			</div>
 		</div>
 	</div>
