--- a/about.html
+++ b/about.html
@@ -45,15 +45,15 @@
 		<div class="s- row">
 			<div class="eleven columns">
 				<h2>Arbete</h2>
-                <h3>Projektledare Fröjd / 17.02 - pågående</h3>
+                <h3>Digital projektledare Fröjd / 17.02 - pågående</h3>
 				<div class="text">
 					&nbsp;
 				</div>
-				<h3>Webutvecklare Ottoboni / 14.12-17.03</h3>
+				<h3>Webbutvecklare Ottoboni / 14.12-17.03</h3>
 				<div class="text">
 					<p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
 				</div>
-				<h3>Webutvecklare Nansen / 13-14</h3>
+				<h3>Webbutvecklare Nansen / 13-14</h3>
 				<div class="text">
 					<p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus. Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
 				</div>
