--- a/about.html
+++ b/about.html
@@ -3,101 +3,126 @@
 
 <head>
 
-	<!-- Basic Page Needs
+    <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<meta charset="utf-8">
-	<title>CV</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+    <meta charset="utf-8">
+    <title>CV</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-	<!-- Mobile Specific Metas
+    <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- FONT
+    <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<link href='https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:900|Raleway:400,300,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:900|Raleway:400,300,600' rel='stylesheet' type='text/css'>
 
-	<!-- CSS
+    <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/skeleton.css">
-	<link rel="stylesheet" href="css/nino.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	
-	<!-- Favicon
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/nino.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<link rel="icon" type="image/png" href="images/favicon.png?v=1" />
+    <link rel="icon" type="image/png" href="images/favicon.png?v=1" />
 
 </head>
 
 <body>
 
-	<!-- Primary Page Layout
+    <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<div class="home"><a href="index.html"><span></span></a></div>
-	<div class="container" style="display:none;">
-		<div class="row">
-			<div class="eleven columns" style="margin-top: 22%">
-				<h1>Arbete / Utbildning</h1>
-			</div>
-		</div>
-		<div class="s- row">
-			<div class="eleven columns">
-				<h2>Arbete</h2>
+    <div class="home"><a href="index.html"><span></span></a></div>
+    <div class="container" style="display:none;">
+        <div class="row">
+            <div class="eleven columns" style="margin-top: 22%">
+                <h1>Arbete / Utbildning</h1>
+            </div>
+        </div>
+        <div class="s- row">
+            <div class="eleven columns">
+                <h2>Arbete</h2>
                 <h3>Digital projektledare Fröjd / 17.02 - pågående</h3>
-				<div class="text">
-					&nbsp;
-				</div>
-				<h3>Webbutvecklare Ottoboni / 14.12-17.03</h3>
-				<div class="text">
-					<p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
-				</div>
-				<h3>Webbutvecklare Nansen / 13-14</h3>
-				<div class="text">
-					<p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus. Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
-				</div>
-				<h3>Medieproducent, ljudtekniker på Tundell och Salmson / 10-12</h3>
-				<div class="text">
-					<p>Produktion av ljudböcker samt DAISY-böcker, audio post produktion och HTML/CSS kodning och synkronisering av ljud till text.</p>
-				</div>
-				<h3>Ljudtekniker & AV-tekniker, frilans / 05-12</h3>
-				<h3>Ateljéassistent Ogilvy reklam/designbyrå / 99</h3>
-			</div>
-		</div>
-		<hr>
-		<div class="s- row">
-			<div class="eleven columns">
-				<h2>Utbildning</h2>
-				<h3>.NET/EPiServerutvecklare 300 YH poäng på Nackademin / 12-14</h3>
-				<div class="text"><p>Nackademin Yrkeshögskola.</p></div>
-				<h3>Diplomerad Webmaster / 12</h3>
-				<div class="text">
-					<p>Deltidskurs, Folkuniversitetet.</p>
-				</div>
-				<h3>E-bokdesign och produktion / 11</h3>
-				<div class="text">
-					<p>7.5 hp Södertörns Högskola.</p>
-				</div>
-				<h3>Bachelor of Arts, Recording Arts Major / 03-05</h3>
-				<div class="text">
-					<p>Flyttade till Australien och pluggade ljud och 
-musikproduktion. Fick med en Bachelor of Arts hem.</p>
-				</div>
-				<h3>Riddarfjärdsskolans gymnasium / 99</h3>
-				<div class="text">
-					<p>Tog studenten från Riddarfjärdens gymnasieskola, 
-inriktning Reklam & Information (Media).</p>
-				</div>
-				<h3>Föddes / 80</h3>
-			</div>
-		</div>
-		<hr>
-	</div>
+                <div class="text">
+                    &nbsp;
+                </div>
+                <h3>Webbutvecklare Ottoboni / 14.12-17.03</h3>
+                <div class="text">
+                    <p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="s- row">
+        <div class="eleven columns fullSection" style="display:none;">
+            <div class="container">
+                <div class="s- row">
+                    <div class="eleven columns">
+                   <div class="text">
+                        <p>
+                            "I had the privilege to directly manage Nino for a little more than two years at Ottoboni. In my mind I hired a Junior .NET developer but I quickly realized that Ninos drive and ambition meant that I had to scratch the "junior" part. Nino worked most of the time in our largest customer team. First solely as a .NET developer but later as Tech Lead of the entire project.
+                        </p>
 
-	<!-- End Document
+                        <p>Nino is always positive and solution-oriented which helped spread a great atmosphere in the team and the company. He is never afraid to dig in when it is needed and is truly a rock to lean on.
+                        </p>
+                        <p>
+                            I have no doubt that Nino will go on to achieve great things in his career and I can only gratulate any company that hires him." <br/><span class="quoter">- Kristoffer Larsson CTO Ottoboni</span></p>
+                   </div> 
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="display:none;">
+        <div class="s- row">
+            <div class="eleven columns">
+                <h3>Webbutvecklare Nansen / 13-14</h3>
+                <div class="text">
+                    <p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus. Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
+                </div>
+                <h3>Medieproducent, ljudtekniker på Tundell och Salmson / 10-12</h3>
+                <div class="text">
+                    <p>Produktion av ljudböcker samt DAISY-böcker, audio post produktion och HTML/CSS kodning och synkronisering av ljud till text.</p>
+                </div>
+                <h3>Ljudtekniker & AV-tekniker, frilans / 05-12</h3>
+                <h3>Ateljéassistent Ogilvy reklam/designbyrå / 99</h3>
+            </div>
+        </div>
+        <hr>
+        <div class="s- row">
+            <div class="eleven columns">
+                <h2>Utbildning</h2>
+                <h3>.NET/EPiServerutvecklare 300 YH poäng på Nackademin / 12-14</h3>
+                <div class="text">
+                    <p>Nackademin Yrkeshögskola.</p>
+                </div>
+                <h3>Diplomerad Webmaster / 12</h3>
+                <div class="text">
+                    <p>Deltidskurs, Folkuniversitetet.</p>
+                </div>
+                <h3>E-bokdesign och produktion / 11</h3>
+                <div class="text">
+                    <p>7.5 hp Södertörns Högskola.</p>
+                </div>
+                <h3>Bachelor of Arts, Recording Arts Major / 03-05</h3>
+                <div class="text">
+                    <p>Flyttade till Australien och pluggade ljud och musikproduktion. Fick med en Bachelor of Arts hem.</p>
+                </div>
+                <h3>Riddarfjärdsskolans gymnasium / 99</h3>
+                <div class="text">
+                    <p>Tog studenten från Riddarfjärdens gymnasieskola, inriktning Reklam & Information (Media).</p>
+                </div>
+                <h3>Föddes / 80</h3>
+            </div>
+        </div>
+        <hr>
+    </div>
+
+    <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-   <script src="js/nino.js"></script>
+    <script src="js/nino.js"></script>
 </body>
 
 </html>
