--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<div class="home"><a href="index.html" title="Hem"><span></span></a></div>
 	<div class="container" style="display:none;">
 		<div class="row">
-			<div class="two-thidrs column" style="margin-top: 22%">
+			<div class="two-thidrs column title">
 				<h1>Nino Mengarelli.</h1>
 				<p class="slogan">Teknisk projektledare</p>
 				<a class="button button-primary" href="about.html">Läs mer om mig!</a>
