--- a/about.html
+++ b/about.html
@@ -24,13 +24,14 @@
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/nino.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/0f56239047.js"></script>
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="images/favicon.png?v=1" />
 
 </head>
 
-<body>
+<body class="about">
 
     <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -61,7 +62,7 @@
                 <div class="s- row">
                     <div class="eleven columns">
                    <div class="text">
-                        <p>
+                           <p>
                             "I had the privilege to directly manage Nino for a little more than two years at Ottoboni. In my mind I hired a Junior .NET developer but I quickly realized that Ninos drive and ambition meant that I had to scratch the "junior" part. Nino worked most of the time in our largest customer team. First solely as a .NET developer but later as Tech Lead of the entire project.
                         </p>
 
@@ -117,8 +118,26 @@
                 <h3>Föddes / 80</h3>
             </div>
         </div>
-        <hr>
+        <hr class="last">
     </div>
+     <footer>
+        <div class="container">
+            <div class="s- row">
+                <div class="eleven columns">
+                    <div class="contact">
+                        <a href="mailto:elninoprod@gmail.com" title="Email">
+                            <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/nino-mengarelli-3140005b" title="LinkedIn profile">
+                            <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="tel:0707957073">+46 (0)70 795 70 73</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
