--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="home">
         <a href="index.html" title="Hem"><span></span></a>
     </div>
-    <div class="container" style="display:none;">
+    <div class="container last" style="display:none;">
         <div class="row">
             <div class="two-thidrs column title">
                 <h1>Nino Mengarelli.</h1>
