--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
     <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="home"><a href="index.html"><span></span></a></div>
+    <div class="home"><a href="index.html"><span></span></a><label class="name">Nino Mengarelli - CV</label></div>
     <div class="container" style="display:none;">
         <div class="row">
             <div class="eleven columns" style="margin-top: 22%">
