--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Nino</title>
+    <title>Nino Mengarelli</title>
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Nino Mengarelli">
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
