fix breaking text mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a href="https://www.linkedin.com/in/nino-mengarelli-3140005b" title="LinkedIn profile">
                             <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
                         </a>
-                        <a href="tel:0707957073">+46 (0)70 795 70 73</a>
+                        <a href="tel:0707957073" class="phone">+46 (0)70 795 70 73</a>
                     </div>
                 </div>
             </div>
