--- a/about.html
+++ b/about.html
@@ -47,11 +47,23 @@
                 <h2>Arbete</h2>
                 <h3>Digital projektledare Fröjd / 17.02 - pågående</h3>
                 <div class="text">
-                    &nbsp;
+                    <p>
+                        Fröjd lade ut en annons med rubriken "Utvecklare som vill bli projektledare". Då jag trivdes med rollen som tech/team lead och hade tankar på att en dag bli projektledare, så kändes det naturligt att hoppa på det erbjudandet. Projektledarrollen på Fröjd är bred och innefattar  produktionsledning, projektledning och försäljning. 
+                         </p>
+                        <p>Jag projektleder både små och större webbprojekt för kunder inom en rad olika brancher. Fröjd är en plattformsoberoende digitalbyrå och våra lösningar kan utvecklas i Episerver, Django/Wagtail, Wordpress eller node.js beroende på behovet.</p>
+                        <p>
+                            Varje dag för med sig nya lärdomar och utmaningar. Jag har växt med rollen och gör alltid mitt yttersta för att leverera värde för kunden, kundens kund samt att peppa projektgruppen.
+                        </p>
+                        <p>
+                            Den viktigaste för ett lyckat projekt är samarbete. Att se kunden och den egna projektgruppen som ett team som jobbar tillsammans.
+                        </p>
+                   
                 </div>
                 <h3>Webbutvecklare Ottoboni / 14.12-17.03</h3>
                 <div class="text">
-                    <p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
+                    <p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. </p>
+                    <p>
+                    Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
                 </div>
             </div>
         </div>
@@ -81,7 +93,10 @@
             <div class="eleven columns">
                 <h3>Webbutvecklare Nansen / 13-14</h3>
                 <div class="text">
-                    <p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus. Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
+                    <p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus. 
+                    </p>
+                    <p>
+                    Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
                 </div>
                 <h3>Medieproducent, ljudtekniker på Tundell och Salmson / 10-12</h3>
                 <div class="text">
