--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
 
@@ -48,22 +48,22 @@
                 <h3>Digital projektledare Fröjd / 17.02 - pågående</h3>
                 <div class="text">
                     <p>
-                        Fröjd lade ut en annons med rubriken "Utvecklare som vill bli projektledare". Då jag trivdes med rollen som tech/team lead och hade tankar på att en dag bli projektledare, så kändes det naturligt att hoppa på det erbjudandet. Projektledarrollen på Fröjd är bred och innefattar  produktionsledning, projektledning och försäljning. 
-                         </p>
-                        <p>Jag projektleder både små och större webbprojekt för kunder inom en rad olika brancher. Fröjd är en plattformsoberoende digitalbyrå och våra lösningar kan utvecklas i Episerver, Django/Wagtail, Wordpress eller node.js beroende på behovet.</p>
-                        <p>
-                            Varje dag för med sig nya lärdomar och utmaningar. Jag har växt med rollen och gör alltid mitt yttersta för att leverera värde för kunden, kundens kund samt att peppa projektgruppen.
-                        </p>
-                        <p>
-                            Den viktigaste för ett lyckat projekt är samarbete. Att se kunden och den egna projektgruppen som ett team som jobbar tillsammans.
-                        </p>
-                   
+                        Fröjd lade ut en annons med rubriken "Utvecklare som vill bli projektledare". Då jag trivdes med rollen som tech/team lead och hade tankar på att en dag bli projektledare, så kändes det naturligt att hoppa på det erbjudandet. Projektledarrollen på Fröjd är bred och innefattar produktionsledning, projektledning och försäljning.
+                    </p>
+                    <p>Jag projektleder både små och större webbprojekt för kunder inom en rad olika brancher. Fröjd är en plattformsoberoende digitalbyrå och våra lösningar kan utvecklas i Episerver, Django/Wagtail, Wordpress eller node.js beroende på behovet.</p>
+                    <p>
+                        Varje dag för med sig nya lärdomar och utmaningar. Jag har växt med rollen och gör alltid mitt yttersta för att leverera värde för kunden, kundens kund samt att peppa projektgruppen.
+                    </p>
+                    <p>
+                        Den viktigaste för ett lyckat projekt är samarbete. Att se kunden och den egna projektgruppen som ett team som jobbar tillsammans.
+                    </p>
+
                 </div>
                 <h3>Webbutvecklare Ottoboni / 14.12-17.03</h3>
                 <div class="text">
-                    <p>Arbetat med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet är som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. </p>
+                    <p>Arbetade till största delan med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet var främst som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. </p>
                     <p>
-                    Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
+                        Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
                 </div>
             </div>
         </div>
@@ -73,17 +73,23 @@
             <div class="container">
                 <div class="s- row">
                     <div class="eleven columns">
-                   <div class="text">
-                           <p>
+                        <div class="text">
+                            <p>
+                                <em>
                             "I had the privilege to directly manage Nino for a little more than two years at Ottoboni. In my mind I hired a Junior .NET developer but I quickly realized that Ninos drive and ambition meant that I had to scratch the "junior" part. Nino worked most of the time in our largest customer team. First solely as a .NET developer but later as Tech Lead of the entire project.
-                        </p>
+                        </em>
+                            </p>
 
-                        <p>Nino is always positive and solution-oriented which helped spread a great atmosphere in the team and the company. He is never afraid to dig in when it is needed and is truly a rock to lean on.
-                        </p>
-                        <p>
-                            I have no doubt that Nino will go on to achieve great things in his career and I can only gratulate any company that hires him." <br/><span class="quoter">- Kristoffer Larsson CTO Ottoboni</span></p>
-                   </div> 
-                </div>
+                            <p>
+                                <em>
+                        Nino is always positive and solution-oriented which helped spread a great atmosphere in the team and the company. He is never afraid to dig in when it is needed and is truly a rock to lean on.
+                        
+                        </em></p>
+                            <p>
+                                <em>
+                            I have no doubt that Nino will go on to achieve great things in his career and I can only gratulate any company that hires him."</em> <br/><span class="quoter">- Kristoffer Larsson CTO Ottoboni</span></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -93,10 +99,10 @@
             <div class="eleven columns">
                 <h3>Webbutvecklare Nansen / 13-14</h3>
                 <div class="text">
-                    <p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus. 
+                    <p>Gick från praktik till jobb under hösten 2013. De projekt jag arbetade med innefattar både interna och externa webbplatser med EPiServer-plattformen och MVC i fokus.
                     </p>
                     <p>
-                    Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
+                        Ett urval av de uppdrag jag var delaktig i är Absolut.com, Fastighetsbyrån externwebb, SACO intranät, Stora journalistpriset och ABF.</p>
                 </div>
                 <h3>Medieproducent, ljudtekniker på Tundell och Salmson / 10-12</h3>
                 <div class="text">
@@ -135,7 +141,7 @@
         </div>
         <hr class="last">
     </div>
-     <footer>
+    <footer>
         <div class="container">
             <div class="s- row">
                 <div class="eleven columns">
