--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 </div>
                 <h3>Webbutvecklare Ottoboni / 14.12-17.03</h3>
                 <div class="text">
-                    <p>Arbetade största delen av min tid på Ottoboni med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet var främst som backend-utvecklare, och mot slutet, techlead. I rollen ingår utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. </p>
+                    <p>Arbetade största delen av min tid på Ottoboni med Försvarsmaktens digitala närvaro i form av Myndighets – och rekryteringssajt. Min roll i teamet var främst som backend-utvecklare, och mot slutet, techlead. I rollen ingick utöver utveckling även viss produktionsledning, kundkontakt och infrastrukturarbete. </p>
                     <p>
                         Jag har lärt mig väldigt mycket om stora komplexa webblösningar, DevOps, säkerhet och att kommunicera med olika stakeholders genom detta projekt. Tekniker/produkter vi använder oss av: EPiServer CMS 9, EPiServer Find, ImageVault, Git, Visual Studio Online, Azure, Octopus Deploy.</p>
                 </div>
