--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="two-thidrs column title">
                 <h1>Nino Mengarelli.</h1>
-                <p class="slogan">Teknisk projektledare</p>
+                <p class="slogan">Projektledare</p>
                 <a class="button button-primary" href="about.html">Erfarenhet &amp; utbildning</a>
             </div>
         </div>
