--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
         <div class="s- row">
             <div class="eleven columns">
                 <h2>Arbete</h2>
-                <h3>Digital Business Analyst Thomas Cook / 17.02 - 18.06</h3>
+                <h3>Digital Business Analyst Thomas Cook / 18.08 - </h3>
                 <div class="text"></div>
-                <h3>Digital projektledare Fröjd / 17.02 - 18.06</h3>
+                <h3>Digital projektledare Fröjd / 17.02 - 18.08</h3>
                 <div class="text">
                     <p>
                         Fröjd lade ut en annons med rubriken "Utvecklare som vill bli projektledare". Då jag trivdes med rollen som tech/team lead och hade tankar på att en dag bli projektledare, så kändes det naturligt att hoppa på det erbjudandet. Projektledarrollen på Fröjd är bred och innefattar produktionsledning, projektledning och försäljning.
